--- a/src/resources/db.properties
+++ b/src/resources/db.properties
@@ -1,12 +1,12 @@
 # MySQL properties
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/first_db
+db.url=jdbc:mysql://localhost:3306/first_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT&allowPublicKeyRetrieval=true&useSSL=false&zeroDateTimeBehavior=convertToNull
 db.username=root
 db.password=11111
 
 # Hibernate properties
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=create-drop
 
 
