вьюшки не резолвятся

--- a/src/resources/db.properties
+++ b/src/resources/db.properties
@@ -7,6 +7,6 @@ db.password=11111
 # Hibernate properties
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=create
 
 
