--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 
     <hibernate-core.version>5.6.3.Final</hibernate-core.version>
     <hibernate-entitymanager.version>5.2.3.Final</hibernate-entitymanager.version>
+    <hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
 
     <mysql-connector-java.version>8.0.25</mysql-connector-java.version>
   </properties>
@@ -76,6 +77,12 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-entitymanager</artifactId>
       <version>${hibernate-entitymanager.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>${hibernate-validator.version}</version>
     </dependency>
 
     <!-- MySQL -->
